# rp2350-rtos-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
